# led_pannel_gazebo

./: .gitignore  README.md
src/led_panel_sim/: package.xml  setup.cfg  setup.py
src/led_panel_sim/launch/: launch_panel.launch.py
src/led_panel_sim/led_panel_sim/: QR_publisher.py  code_publisher.py
src/led_panel_sim/models/led_panel/: model.config  model.sdf  model3.sdf
src/led_panel_sim/worlds/: led_panel.world
